fix some deprecations